css/common.css
:root {
    --secondary-text-color: #5FD1A2;
    --green-text-color: #FC6D5D;
    --card-shadow: #111c12;
    --card-background: rgb(10,46,74);
    /*--box-background: #0F3952;*/
    /*--excerpt-text: rgb(247,230,207);*/
    --excerpt-text: rgb(255,234,209);
    --text-shadow: #160315;
    --default-primary-color: rgb(7,36,59);
    /*--default-primary-color: #032336;*/
}

html {
    text-shadow: 0.0135em 0.0135em 0 var(--text-shadow);
    font: lighter 100%/1.5  "Helvetica","Yantramanav",Helvetica,Arial,"Lucida Grande",sans-serif;;
}

body {  }

h2, h3, h4 {
    text-align: center;
}

.heading{
    margin-bottom: 0;
    padding: 0;

    text-align: center;
}

#header {
    margin: 0 0 40px;
    padding: 0;

    text-align: center;
}

#header a{
    margin: 0 10px 0 10px;
    text-decoration: none;
    color: #A0A0A0;
}

#header a:visited {
    color: #A0A0A0;
}

#header a :hover {
    color: var(--secondary-text-color);
}

.bullet {
    font-weight: normal;
}

.footer-h2 {
    margin:50px 0 0 0 ;
    padding:0;
    font-weight: 300;
    font-size: 18px;
    text-align: center;
}

.footer-h3 {
    margin:0;
    padding:0;
    font-weight: 300;
    font-size: 14px;
    text-align: center;
}

.large-card {
    margin: 50px auto;

    background: var(--card-background);
    border-radius: 3px;
    text-align: left;
    width: 550px;
    height: 350px;
    box-shadow: 1px 1px .2em var(--card-shadow);
}

.mid-card {
    margin: 0 15px 20px 15px;

    background: var(--card-background);
    border-radius: 3px;
    text-align: left;
    width: 350px;
    height: 250px;
    box-shadow: 1px 1px .2em var(--card-shadow);
}

.title {
    padding: 15px 0 0 15px;
    margin: 0;

    font-size: x-large;
    color: var(--green-text-color);
}

.company-date {
    padding: 0 0 2px;
    margin: 0 15px;

    border-bottom: 1px solid var(--green-text-color);
}

.company {
    padding: 0 5px 0 0;
    margin:0;

    font-size: large;
    color: var(--excerpt-text);
}

.date {
    padding: 0;
    margin: 0;

    font-size: medium;
    color: silver;
}

div.excerpt-long {
    padding: 0;
    margin: 15px 15px 5px;

    color: var(--excerpt-text);

    text-align: left;
    font-size: 11pt;
}

div.excerpt-short {
    padding: 0;
    margin: 15px 15px 5px;

    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;

    color: var(--excerpt-text);
    text-align: left;
    font-size: 11pt;
}

.read-more, .back {
    margin-top: 10px;

    width:inherit;
    height: 60px;
    text-align: center;
}

.detail{
    width:inherit;
    height: 290px;
}

.reg-card {
    width:inherit;
    height: 190px;
}

div #read-more a button:hover{
}

#experience_section {
    margin: 0 auto;
    padding-bottom: 30px;

    display: flex;
    flex-wrap: wrap;
    flex-direction: row;

    justify-content: center;
    width: 760px;
}

#project_section {
    margin: 0 auto;

    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;

    width: 760px;
}

p {
    padding: 0;
    margin: 0;
}

.clear {
    clear: both;
}

.contacts {
    font-size: 25px;
}

.PageNavigation {
    font-size: 14px;
    display: block;
    width: auto;
    overflow: hidden;
}

.PageNavigation a {
    display: block;
    width: 50%;
    float: left;
    margin: 1em 0;
}

.PageNavigation .next {
    text-align: right;
}

.default-primary-color { background: var(--default-primary-color); }
.primary-text-color    { color: white; }
.secondary-text-color  { color: var(--secondary-text-color); }

